--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -11,12 +11,12 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4  # 更新至 v4
 
       - name: Set up Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4  # 更新至 v4
         with:
-          python-version: 3.9
+          python-version: "3.9"
 
       - name: Install dependencies
         run: |
@@ -28,7 +28,7 @@ jobs:
           pytest --junitxml=test_results.xml
 
       - name: Upload Test Results
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4  # 更新至 v4
         with:
           name: test-results
           path: test_results.xml
